--- a/STA440_Individual_Project.Rmd
+++ b/STA440_Individual_Project.Rmd
@@ -178,18 +178,20 @@ model_output_full
 ```
 
 
-In examining the results of our type of subsequent procedure model (Table 1 above), we were first interested in examining associations between length of survival and the type of interventional procedure: CABG or PCI. We saw no significant association between type of procedure and hazard of death, holding all other variables constant. That is, for individuals who have zero diseased vessels and no history of myocardial infarction, cerebrovascular disease, and/or diabetes, we find that those who received the PCI catheterization are expected to have 1.130 times the hazard of death compared to an individual who received the CABG treatment. We found that the confidence interval for this estimate crosses 1  ([0.959, 1.330]), so there is no significant association between hazard of death and type of interventional procedure, for these patients.
+In examining the results of the logistic regression model (Table 1 above), I was first interested in examining associations between the odds of a successful batted ball event and the location of the pitch, high or low. I found evidence of a significant association between the vertical pitch location and the odds of a successful batted ball, holding all other variables constant. That is, pitches that resulted in a pop fly, I found that those that were low strikes were expected to have 1.175	times the odds of being a successful hit compared to a high strike. We found that the confidence interval for this estimate does not cross 1  ([1.011, 1.365]), so there is evidence of significant association between the odds of a successful hit and vertical pitch location, for these pitches.
 
-However, we then proceeded to look closer into the type of catheterization by looking at interaction effects between comorbidities and type (PCI or CABG). In doing so, we found that there were significant association between the type of catheterization and history of cerebrovascular disease. That is, for individuals with a history of cerebrovascular disease, patients who received the PCI catheterization are expected to have 2.318 [1.967, 2.700] times the hazard compared to an individual who received the CABG treatment. Similarly, PCI is associated with higher hazard for patients with a history of diabetes. That is, for individuals with a history of diabetes, patients who received the PCI catheterization are expected to have 2.251 [1.992, 2.698] times the hazard compared to an individual who received the CABG treatment. This supported our hypothesis that PCI may be associated with worse outcome for patients who have more severe/complicated conditions.
 
-Among the variables we controlled for, we saw that a patient's past history of chronic illness had significant associations with length of survival after catheterization.Holding all other variables in the model constant, an individual who has had previous history of Myocardial Infarction is expected to have 1.242 ([1.149, 1.342]) times the hazard for an individual who has not had a previous history of this condition. This, and all other multiplicative effects discussed below, holds regardless of the time t. Holding all other variables in the model constant, an individual who has had a previous history of Diabetes is expected to have approximately 1.491 ([1.371, 1.621]) times the hazard of death compared to an individual who has not had a previous history of this condition. Holding all other variables in the model constant, an individual who has had a previous history of Cerebrovascular Disease is expected to have approximately 1.608 ([1.441, 1.795]) times the hazard of death compared to an individual who has not had a previous history of this condition.
+#####################3
+However, I then proceeded to look closer into pitch location by looking at interaction effects between whether the pitch was a high or low strike and the type of batted ball. In doing so, I found evidence of a significant association between the pitch location and the batted ball being a ground ball, with all other variables held constant. That is, for pitches that are low strikes, batted balls that are ground balls are expected to have 1.893 [1.615, 2.219] times the odds of being a successful hit compared to those resulting from a high strike. That means that ground balls are associated with higher odds of a successful hit when the pitch is a low strike, but separately it does not seem to be associated with as great of a positive increase to the odds in comparison to other types of batted balls. This does not support my initial reasoning for including this interaction term, although it makes sense if we infer that it may be easier to put power behind, but not levitate, a higher pitch.
+##################
 
-As expected, there is also a positive association between the number of diseased vessels and survival length. Holding all other variables in the model constant, there is a 1.360 ([1.289, 1.436]) times increase in the expected relative hazard for each one additional increase in the number of significantly diseased vessels.
+Similarly, PCI is associated with higher hazard for patients with a history of diabetes. That is, for individuals with a history of diabetes, patients who received the PCI catheterization are expected to have 2.251 [1.992, 2.698] times the hazard compared to an individual who received the CABG treatment. This supported our hypothesis that PCI may be associated with worse outcome for patients who have more severe/complicated conditions.
 
-There were also notable associations between hazard and patient gender. Holding all other variables in the model constant, females are expected to have 1.229 ([1.165, 1.297]) times the hazard of death compared to males.
+Among the variables I controlled for, I noticed that hit distance had a significant negative association with the odds of a hit being successful. Holding all other variables in the model constant, for every additional foot of projected distance, the odds of a successful hit are expected to decrease by a factor of 0.998 ([0.998, 0.999]). I found this interesting because it suggests that hits that travel greater distances don't have the positive correlation with hit success that we might assume. 
 
-Interestingly, we do not find any statistically significant associations between hazard and interesting variables such as race and history of smoking.
+Additionally, I made note that the type of batted ball (line drives and popups) also had a significant association with the odds of a pitch resulting in a successful hit. For high strikes that result in a line drive, the odds of a successful hit are expected to increase by a factor of 12.787	([11.176, 14.662]), holding all other variables constant. Similarly, for high strikes that result in a popup, the odds of a successful hit are expected to decrease by a factor of 0.143	([0.088, 0.219]), holding all other variables constant.
 
+Interestingly, there was not evidence of statistically significant associations between the odds of a successful batted ball and pitcher related variables like the pitcher handednes, the release speed, or the type of pitch.
 
 ```{r}
 cooksd_plot <- autoplot(lm_model, which = 4, ncol = 1) +
